# PPE-Compliance-Monitor

./: .env.example  .gitignore  Dockerfile  README.md  app.py  database.py  detect.py  docker-compose.yml  pyproject.toml  requirements.txt  tracker.py  train.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
infra/docker/postgres/: init.sql
infra/grafana/dashboards/: ppe_dashboard.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
src/alerts/: manager.py  slack.py
src/api/: server.py
src/camera/: manager.py  stream.py
src/config/: settings.py
src/database/: repository.py
src/detection/: draw.py  model.py
src/metrics/: prometheus.py
src/tracking/: violation_tracker.py
tests/: conftest.py  test_database.py  test_draw.py  test_tracker.py
